@@ -6,6 +6,7 @@ Changelog
 ---------------------
 
 - Testserver: add support for custom fixtures. [jone]
+- Reindex and store additionally supported bumblebee documents. [elioschmutz]
 - Make sure docproperties gets updated when updating an agendaitem list or a protocol. [phgross]
 - Fix logo upload in the theme control-panel. [phgross]
 - Solr TabbedView filters: Also include non-wildcarded terms in query. [lgraf]
